# cloven

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  cloven.sln  cloven.vcxproj  cloven.vcxproj.filters  imgui.ini  vcpkg.json
shaders/: shader.frag  shader.vert
src/: app_settings.h  camera.cpp  camera.h  cloven.cpp  gradient_editor.cpp  gradient_editor.h  gui.cpp  gui.h  main.cpp  mesh.cpp  mesh.h  model.cpp  model.h  shader.cpp  shader.h  texture.cpp  texture.h  vertex.h  window.cpp  window.h
src/windows/: gui_window.h  test_window.cpp  test_window.h
